# pit-exante

./: .env.example  .gitignore  .pre-commit-config.yaml  INSTRUKCJA_POBRANIA_DANYCH.md  README.md  download_transactions.py  pyproject.toml
config/: symbol_overrides.json
config/pit8c/: .gitignore  2025.json.example  README.md
docs/adr/: 0001-pitfx-empirical-reference.md  0002-fail-fast-tax-anomalies.md  0003-year-boundary-timestamp.md  0004-per-country-upo-cap.md  0005-fractional-cash-cost-zero.md  0006-cross-year-refund-manual-decision.md  0007-nbp-api-authority.md  0008-calculator-architecture.md  README.md
src/pit_exante/: __init__.py  calculator.py  classifier.py  cli.py  country.py  fifo.py  models.py  nbp.py  parser.py  pit8c.py  report.py  symbol_metadata.py
tests/: conftest.py  test_calculator_failfast.py  test_classifier.py  test_cli.py  test_country.py  test_download.py  test_fifo.py  test_nbp.py  test_parser.py  test_pit8c.py  test_report.py  test_symbol_metadata.py
